kubernetes/apps/default/overseerr/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: overseerr
spec:
  parentRefs:
    - kind: ListenerSet
      name: deangalvin-dev-listener-set
      namespace: networking
  hostnames:
    - overseerr.deangalvin.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: overseerr
          port: 80
